<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyPlaces</string>

    <string name="act_home_title">Home</string>
    <string name="act_detail_label_about">SOBRE</string>

    <string name="menu_main_home">Home</string>
    <string name="menu_main_profile">Perfil</string>

    <string name="frag_profile_bt_follow">Seguir</string>
    <string name="frag_profile_name">Samuel Fonseca</string>
    <string name="frag_profile_email">samfonsec@gmail.com</string>
    <string name="frag_profile_phone">+55 31 99509 9336</string>
    <string name="frag_profile_location">Belo Horizonte - MG</string>

    <string name="error_dialog_title">Ocorreu um erro!</string>
    <string name="error_dialog_message">Por favor, tente novamente. Se o erro persistir, contate o nosso suporte técnico.</string>
    <string name="error_dialog_bt_close">Fechar</string>
    <string name="error_dialog_bt_try_again">Tentar novamente</string>

    <string name="monday">seg</string>
    <string name="tuesday">ter</string>
    <string name="wednesday">qua</string>
    <string name="thursday">qui</string>
    <string name="friday">sex</string>
    <string name="saturday">sab</string>
    <string name="sunday">dom</string>

</resources>
