<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCircle"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_half_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_marginStart="115dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:src="@drawable/profile_samuel"
                app:layout_constraintBottom_toTopOf="@id/tvName"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/frag_profile_name"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@id/ivCircle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btFollow"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/big_margin"
                android:background="@drawable/bg_gradient_button"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/frag_profile_bt_follow"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <View
                android:id="@+id/vDivider1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="#33000000"
                app:layout_constraintStart_toStartOf="@id/btFollow"
                app:layout_constraintTop_toBottomOf="@id/btFollow" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="@id/tvEmail"
                app:layout_constraintEnd_toStartOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvEmail"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/frag_profile_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vDivider1"
                app:layout_constraintTop_toBottomOf="@id/vDivider1" />

            <!-- phone -->

            <View
                android:id="@+id/vDivider2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="13dp"
                android:background="#33000000"
                app:layout_constraintStart_toStartOf="@id/btFollow"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@id/tvPhone"
                app:layout_constraintEnd_toStartOf="@id/tvPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvPhone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/frag_profile_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vDivider2"
                app:layout_constraintTop_toBottomOf="@id/vDivider2" />

            <!-- location -->

            <View
                android:id="@+id/vDivider3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="13dp"
                android:background="#33000000"
                app:layout_constraintStart_toStartOf="@id/btFollow"
                app:layout_constraintTop_toBottomOf="@id/tvPhone" />

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin"
                app:layout_constraintBottom_toBottomOf="@id/tvLocation"
                app:layout_constraintEnd_toStartOf="@id/tvLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLocation"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/frag_profile_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vDivider3"
                app:layout_constraintTop_toBottomOf="@id/vDivider3" />

            <View
                android:id="@+id/vDivider4"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="13dp"
                android:background="#33000000"
                app:layout_constraintStart_toStartOf="@id/btFollow"
                app:layout_constraintTop_toBottomOf="@id/tvLocation" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>